portone/k8s/portone-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portone-subscription
  labels:
    name: portone-subscription
